# nimbus-c2-saab-boreal-analysis

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  SCIENTIFIC_CLAIMS.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_geography_verification.ipynb  02_pipeline_determinism.ipynb  03_scenario_analysis.ipynb
reliability_lab/: rho_sa_model.py  scenario_simulator.py  threshold_analysis.py  validation_report.py
reliability_lab/tests/: test_rho_sa.py  test_simulation.py  test_thresholds.py
results/: determinism_report.json  scenario_outcomes.json
src/nimbus_saab_ext/: __init__.py  scenarios.py
tests/: test_scenarios.py
