# SPDX-FileCopyrightText: 2026 Team Ruby
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbus-saab-ext"
version = "0.1.0"
description = "Boreal Passage analysis extension for Nimbus-C2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Team Ruby"},
]

dependencies = [
    "numpy>=1.24",
    "nimbus-c2 @ git+https://github.com/Maria-hub-Westrin/nimbus-c2.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nimbus_saab_ext = ["data/*.csv", "data/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"